apps/showcase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: showcase
  namespace: showcase
spec:
  ingressClassName: kong
  rules:
    - host: algovn.com
      http:
        paths:
          - path: /ui-showcase
            pathType: Prefix
            backend:
              service:
                name: showcase
                port: { number: 80 }
  tls:
    - hosts: [algovn.com]
